--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-# Prevent npm from trying to install node: built-ins 
-node-linker=hoisted 
-legacy-peer-deps=true
+
+    @jsr:registry=https://npm.jsr.io
+    
