--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,32 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "devCommand": "npm run dev",
+  "framework": null,
   "installCommand": "npm install",
-  "framework": "vite"
-} 
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        }
+      ]
+    }
+  ]
+}
